// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputDropdown component should render a TextField with error status 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="dropdown__input quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--error quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          class="input peer input__align--left input__size--md"
          data-headlessui-state=""
          data-testid="dropdown-input"
          placeholder=""
          role="combobox"
          type="select"
          value=""
        />
      </div>
      <svg
        class="dropdown__transform dropdown__transform-rotate"
        data-state="open"
        height="24"
        role="img"
        viewBox="0 0 14 22"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="m6.535 14.715-5.25-5.25c-.273-.246-.273-.656 0-.93.246-.246.656-.246.93 0L7 13.348l4.785-4.786c.246-.273.656-.273.93 0a.644.644 0 0 1 0 .903l-5.277 5.25a.6.6 0 0 1-.903 0"
          />
        </g>
        <defs>
          <clippath
            id="f43687b6c6d919677eabf8a2c671e282__a"
          >
            <path
              d="M0 0h14v22H0z"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
  <div
    class="dropdown__container dropdown__container--size-md"
  >
    <li
      aria-selected="false"
      class="quill-dropdown-item quill-dropdown-item__size--md quill-dropdown-item__align-left quill-dropdown-item__selected--false__disabled--false"
      data-headlessui-state=""
      id="headlessui-combobox-option-:rd:"
      role="option"
      tabindex="-1"
    >
      <p
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default quill-dropdown-item-label"
      >
        Option 1
      </p>
    </li>
    <li
      aria-selected="false"
      class="quill-dropdown-item quill-dropdown-item__size--md quill-dropdown-item__align-left quill-dropdown-item__selected--false__disabled--false"
      data-headlessui-state=""
      id="headlessui-combobox-option-:re:"
      role="option"
      tabindex="-1"
    >
      <p
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default quill-dropdown-item-label"
      >
        Option 2
      </p>
    </li>
    <li
      aria-selected="false"
      class="quill-dropdown-item quill-dropdown-item__size--md quill-dropdown-item__align-left quill-dropdown-item__selected--false__disabled--false"
      data-headlessui-state=""
      id="headlessui-combobox-option-:rf:"
      role="option"
      tabindex="-1"
    >
      <p
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default quill-dropdown-item-label"
      >
        Option 3
      </p>
    </li>
  </div>
</div>
`;

exports[`InputDropdown component should render a TextField with success status 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="dropdown__input quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__variant--outline--success quill-input__wrapper__size--md"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          class="input peer input__align--left input__size--md"
          data-headlessui-state=""
          data-testid="dropdown-input"
          placeholder=""
          role="combobox"
          type="select"
          value=""
        />
      </div>
      <svg
        class="dropdown__transform dropdown__transform-rotate"
        data-state="open"
        height="24"
        role="img"
        viewBox="0 0 14 22"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="m6.535 14.715-5.25-5.25c-.273-.246-.273-.656 0-.93.246-.246.656-.246.93 0L7 13.348l4.785-4.786c.246-.273.656-.273.93 0a.644.644 0 0 1 0 .903l-5.277 5.25a.6.6 0 0 1-.903 0"
          />
        </g>
        <defs>
          <clippath
            id="f43687b6c6d919677eabf8a2c671e282__a"
          >
            <path
              d="M0 0h14v22H0z"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
  <div
    class="dropdown__container dropdown__container--size-md"
  >
    <li
      aria-selected="false"
      class="quill-dropdown-item quill-dropdown-item__size--md quill-dropdown-item__align-left quill-dropdown-item__selected--false__disabled--false"
      data-headlessui-state=""
      id="headlessui-combobox-option-:r9:"
      role="option"
      tabindex="-1"
    >
      <p
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default quill-dropdown-item-label"
      >
        Option 1
      </p>
    </li>
    <li
      aria-selected="false"
      class="quill-dropdown-item quill-dropdown-item__size--md quill-dropdown-item__align-left quill-dropdown-item__selected--false__disabled--false"
      data-headlessui-state=""
      id="headlessui-combobox-option-:ra:"
      role="option"
      tabindex="-1"
    >
      <p
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default quill-dropdown-item-label"
      >
        Option 2
      </p>
    </li>
    <li
      aria-selected="false"
      class="quill-dropdown-item quill-dropdown-item__size--md quill-dropdown-item__align-left quill-dropdown-item__selected--false__disabled--false"
      data-headlessui-state=""
      id="headlessui-combobox-option-:rb:"
      role="option"
      tabindex="-1"
    >
      <p
        class="quill-typography__body-text__size--md__weight--regular__decoration--default quill-typography__color--default quill-dropdown-item-label"
      >
        Option 3
      </p>
    </li>
  </div>
</div>
`;
